lib/tests/fixtures/compiler/parser/illegal_type_alias_name.baseline
Error: illegal_type_alias_name.pp:1:6: '::Foo' is not a valid name for a type alias.
  type ::Foo = Integer
       ^~~~~
